# tcmgenerator

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: main.rs  tcdistributions.rs
